--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,16 @@
-.App {
+.imageContainer {
+  max-width: 100vw;
+}
+
+.imageContainer img {
+  width: 100%;
+}
+
+.generatePostCard-button {
+  border: 1px solid gray;
+  height: 10vh;
+  margin: 3em;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  border-radius: 3px;
+  padding-top: 2em;
 }
