--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.imageContainer {
+  max-width: 100vw;
+}
+
+.imageContainer img {
+  width: 100%;
+}
+
+.generatePostCard-button {
+  border: 1px solid gray;
+  height: 10vh;
+  margin: 3em;
+  text-align: center;
+  border-radius: 3px;
+  padding-top: 2em;
+}
