--- a/app/views/4x6_postcard.html.erb
+++ b/app/views/4x6_postcard.html.erb
@@ -22,7 +22,7 @@
     margin: 0;
     padding: 0;
     /* If using an image, the background image should have dimensions of 1875x1275 pixels. */
-    background-image: url(<%= front_photo_url %>);
+    background-image: url("<%= front_photo_url %>");
     background-size: 6.25in 4.25in;
     background-repeat: no-repeat;
   }
