--- a/client/src/imageUpload/imageUpload.css
+++ b/client/src/imageUpload/imageUpload.css
@@ -18,6 +18,15 @@
   border-radius: 3px;
 }
 
+.fileUpload-Container img {
+  width: 100%;
+}
+
+.fileUpload-Container.withImage {
+  background-color: rgba(0,0,0,0);
+  padding: 0;
+}
+
 .fileUpload-PostcardIcon {
   width: 50vw;
   margin: auto;
