--- a/client/src/imageUpload/imageUpload.css
+++ b/client/src/imageUpload/imageUpload.css
@@ -1,38 +1,19 @@
-.fileUpload-Button {
-  width: 80%;
-  background-color: rgb(26, 196, 181);
-  color: white;
-  padding: 1em;
-  border-radius: 8px;
-
-  text-align: center;
-  margin: auto;
-  margin-top: 3em;
-}
-
 .fileUpload-Container {
-  text-align: center;
-  margin: 3em;
+  border-radius: 50%;
+  border: 1px solid black;
   padding: 1em;
-  background-color: rgb(143, 207, 254);
-  border-radius: 3px;
+  text-align: center;
+
+  width: 30vh;
+  height: 30vh;
+
+  margin: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .fileUpload-Container img {
-  width: 100%;
-}
-
-.fileUpload-Container.withImage {
-  background-color: rgba(0,0,0,0);
-  padding: 0;
-}
-
-.fileUpload-PostcardIcon {
-  width: 50vw;
-  margin: auto;
-  margin-bottom: 0;
-}
-
-.fileUpload-Text {
-  color: white;
+  width: 90%;
 }
