--- a/client/src/postcardMessageInput/postcardMessageInput.css
+++ b/client/src/postcardMessageInput/postcardMessageInput.css
@@ -1,11 +1,12 @@
 .PostcardMessageInput--Container {
+  height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 textarea.PostcardMessageInput {
-  width: 80%;
+  height: 45vh;
   border: 1px solid gray;
   font-size: 16px;
-  height: 5em;
 }
