--- a/client/src/button/primaryButton.css
+++ b/client/src/button/primaryButton.css
@@ -5,6 +5,9 @@
   height: 4rem;
   width: 280px;
 
+  font-weight: 600;
+  letter-spacing: 2px;
+
   display: flex;
   justify-content: center;
   align-items: center;
