--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,10 +4,108 @@ html, body {
   margin: 0;
 }
 
+:root {
+	--dull-orange: #dbaf32;
+	--dark-teal: #003041;
+	--white: #ffffff;
+	--greyish-teal: #7d9e94;
+	--light-blue-grey: #c6e4db;
+	--pine-green: rgba(9, 30, 41, 0.97);
+	--black: #000000;
+}
+
+
+.main-header {
+	font-family: 'Barlow Condensed';
+	font-size: 64px;
+	font-weight: 600;
+	font-stretch: condensed;
+	text-align: center;
+	color: #dbaf32;
+	color: var(--dull-orange);
+}
+
+.primary-info {
+	font-family: 'Barlow Condensed';
+	font-size: 48px;
+	font-weight: 500;
+	font-stretch: condensed;
+	letter-spacing: 0.1px;
+	text-align: center;
+	color: #ffffff;
+	color: var(--white);
+}
+
+.secondary-info {
+	font-family: 'Barlow Condensed';
+	font-stretch: condensed;
+	font-size: 28px;
+	font-weight: 500;
+	letter-spacing: 3px;
+	text-align: center;
+	color: #ffffff;
+	color: var(--white);
+}
+
+.small-detail {
+	font-family: 'Barlow Condensed';
+	font-size: 18px;
+	font-weight: 200;
+	line-height: 1.5;
+	text-align: center;
+	color: #ffffff;
+	color: var(--white);
+}
+
+.button-text {
+	font-family: Barlow;
+	font-size: 24px;
+	font-weight: 600;
+	letter-spacing: 2px;
+	text-align: center;
+	color: #0d3041;
+}
+
+.text-style-3 {
+	font-family: Barlow;
+	font-size: 24px;
+	font-weight: 600;
+	font-stretch: condensed;
+	letter-spacing: 2.6px;
+	text-align: right;
+	color: #0d3041;
+}
+
+.secondary-action {
+	font-family: 'Barlow Condensed';
+	font-size: 24px;
+	font-weight: 500;
+	text-align: center;
+	color: #d5ae2d;
+}
+
+.label {
+	font-family: 'Barlow Condensed';
+	font-size: 18px;
+	font-weight: 600;
+	text-align: left;
+	color: #7d9e94;
+	color: var(--greyish-teal);
+}
+
+.footer {
+	font-family: Barlow;
+	font-size: 18px;
+	font-weight: 500;
+	letter-spacing: 2.2px;
+	text-align: center;
+	color: #0d3041;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
 }
 
 .generatePostCard-button {
