--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,6 +108,10 @@ body {
   font-family: 'Barlow Condensed', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .generatePostCard-button {
   border: 1px solid gray;
   height: 10vh;
