--- a/client/src/index/indexPage.css
+++ b/client/src/index/indexPage.css
@@ -1,6 +1,7 @@
 .page {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
 }
 
 .header {
@@ -46,6 +47,7 @@
 
 
 .mainBody {
+  height: 100%;
   background-color: #05313F;
   /* 5rem for header, 3 rem for footer */
   /*height: calc(100vh - 8rem);*/
@@ -87,6 +89,10 @@
 }
 
 .footer-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
   background-color: #C4E4DD;
   text-align: center;
   height: 3rem;
