--- a/client/src/index/processDropdown.css
+++ b/client/src/index/processDropdown.css
@@ -7,6 +7,11 @@
   margin-top: 2em !important;
 }
 
+.processDetails {
+  padding: 1em;
+  padding-top: 0.5em;
+}
+
 .processCards div.processStep {
   margin: 1em;
 }
