--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -1,10 +1,47 @@
 .approvalContent {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .address-reviews {
   display: flex;
   flex-direction: row;
+}
+
+.AddressReview {
+  width: 15vw;
+  margin: 1em;
+}
+
+.AddressReview-Type {
+  text-align: left;
+  margin-bottom: 1em;
+  color: var(--greyish-teal);
+}
+
+.AddressReview .Address {
+  margin: 0;
+}
+
+.AddressReviewAndEdit {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.reviewHorizontalDivider {
+  border: 2px solid var(--greyish-teal);
+  width: 100%;
+  margin: 1em;
+}
+
+.MessageReviewLabel {
+  margin-bottom: 1em;
+  color: var(--greyish-teal);
+}
+
+.MessageReviewContainer {
+  text-align: left;
 }
