--- a/client/src/index/indexPage.css
+++ b/client/src/index/indexPage.css
@@ -47,10 +47,11 @@
 
 
 .mainBody {
+  flex: 1 1 auto;
   height: 100%;
   background-color: #05313F;
-  /* 5rem for header, 3 rem for footer */
-  /*height: calc(100vh - 8rem);*/
+  /* 5rem for header, 3 rem for footer, 3 more somewhere?? */
+  /*height: calc(100vh - 11rem);*/
   color: white;
   padding-bottom: 3rem;
 
@@ -89,8 +90,8 @@
 }
 
 .footer-container {
-  position: absolute;
-  bottom: 0;
+  position: relative;
+  /*bottom: 0;*/
   width: 100%;
 
   background-color: #C4E4DD;
