--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -4,6 +4,10 @@
   justify-content: space-evenly;
 }
 
+.postcardImageReviewContainer {
+  width: 30%;
+}
+
 .address-reviews {
   display: flex;
   flex-direction: row;
