--- a/client/src/index/processDropdown.css
+++ b/client/src/index/processDropdown.css
@@ -17,11 +17,11 @@
 }
 
 .processCards .processImage {
-  border: 1px solid var(--light-blue-grey);
+  /*border: 1px solid var(--light-blue-grey);
   border-radius: 50%;
   padding: 3px;
   width: 8vw;
-  height: 8vw;
+  height: 8vw;*/
 
   display: flex;
   flex-direction: column;
@@ -33,6 +33,6 @@
 
 .processCards .processImage img {
   border-radius: 50%;
-  width: 7vw;
-  height: 7vw;
+  width: 10vw;
+  height: 10vw;
 }
