show a live preview of the postcard

--- a/app/views/4x6_postcard_message.html.erb
+++ b/app/views/4x6_postcard_message.html.erb
@@ -72,7 +72,7 @@
         <div id="ink-free"></div>
         <%= message %>
 
-        <%= image_tag "/postcard-logo-and-text.png" %>
+        <%= image_tag("/postcard-logo-and-text.png", id: "logo") %>
       </div>
   </div>
 </body>
