--- a/client/src/postcardMessageInput/postcardMessageInput.css
+++ b/client/src/postcardMessageInput/postcardMessageInput.css
@@ -3,11 +3,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 100px;
 }
 
 textarea.PostcardMessageInput {
-  height: 45vh;
+  height: 300px;
+  width: 300px;
   border: 1px solid gray;
   font-size: 16px;
-  width: 70vw;
+
 }
