allow for font options

--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -46,6 +46,10 @@
   margin: 1em;
 }
 
+.MessageReview {
+  white-space: pre-wrap;
+}
+
 .MessageReviewLabel {
   margin-bottom: 1em;
   color: var(--greyish-teal);
