--- a/app/views/4x6_postcard_message.html.erb
+++ b/app/views/4x6_postcard_message.html.erb
@@ -3,7 +3,9 @@
 <meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 <title>Lob.com Sample 4x6 Postcard Back</title>
+<link href="https://fonts.googleapis.com/css?family=<%= font.gsub(" ", "+") %>" rel="stylesheet">
 <style>
+
   *, *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -39,6 +41,7 @@
     clear: right;
   }
   .text {
+    white-space: pre-wrap;
     margin: 10px;
     width: 5.5in;
     height: 100%;
@@ -67,14 +70,10 @@
   <div id="safe-area">
     <!-- All text should appear within the safe area. -->
 
-      <div class="text">
-        <div id="spacer"></div>
-        <div id="ink-free"></div>
-        <%= message %>
-
-        <%= image_tag("/postcard-logo-and-text.png", id: "logo") %>
-      </div>
-  </div>
+    <div class="text" style="font-family: <%= font %>; font-size: <%= fontSize %>px;">
+      <div id="spacer"></div>
+      <div id="ink-free"></div><%= message %><%= image_tag("/postcard-logo-and-text.png", id: "logo") %></div>
+    </div>
 </body>
 
 </html>
