--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -1,7 +1,8 @@
 .approvalContent {
   margin-top: 3rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
 }
 
@@ -10,7 +11,8 @@
 }
 
 .postcardImageReviewContainer {
-  width: 30%;
+  width: 6in;
+  height: 4.5in;
 }
 
 .address-reviews {
