use domain host

--- a/app/views/4x6_postcard_message.html.erb
+++ b/app/views/4x6_postcard_message.html.erb
@@ -69,7 +69,7 @@
 
 <body>
   <div id="safe-area">
-    <div class="text"><div id="spacer"></div><div id="ink-free"></div><%= message %><%= image_tag("/postcard-logo-and-text.png", id: "logo") %></div>
+    <div class="text"><div id="spacer"></div><div id="ink-free"></div><%= message %><%= image_tag("https://sayitwithapostcard.com/postcard-logo-and-text.png", id: "logo") %></div>
     </div>
 </body>
 
