save font, alignment, fontisze params to postcard object

--- a/app/views/4x6_postcard_message.html.erb
+++ b/app/views/4x6_postcard_message.html.erb
@@ -48,7 +48,7 @@
     overflow: hidden;
     font-family: <%= font || 'Open Sans' %>;
     font-weight: 400;
-    font-size: <%= fontSize || '16px' %>;
+    font-size: <%= font_size || '16px' %>;
     text-align: <%= alignment || 'left' %>
     color: black;
   }
