--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -60,3 +60,25 @@
 .MessageReviewContainer {
   text-align: left;
 }
+
+@media all and (max-width: 750px) {
+  .postcardImageReviewContainer {
+    margin-left: 2vw;
+    transform: scale(0.6);
+    transform-origin: left;
+
+    margin: auto;
+  }
+}
+
+@media all and (max-width: 414px) {
+  .postcardImageReviewContainer {
+    transform: scale(0.6);
+  }
+}
+
+@media all and (max-width: 350px) {
+  .postcardImageReviewContainer {
+    transform: scale(0.5);
+  }
+}
