--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,10 @@ div.App {
   height: 100%;
 }
 
+.black-text {
+  color: black;
+}
+
 input {
   font-size: 16px; /* make all inputs 16px to avoid iphone zoom %*/
 }
