alloow selecting addresses in the address book and adding them to the to page

--- a/client/src/button/primaryButton.css
+++ b/client/src/button/primaryButton.css
@@ -38,6 +38,10 @@
   border-radius: 40px;
 }
 
+.primaryButton-wide {
+  width: 310px;
+}
+
 .disabledContainer {
   display: flex;
   justify-content: center;
