--- a/client/src/address/address.css
+++ b/client/src/address/address.css
@@ -80,6 +80,12 @@ select {
   border: 3px solid var(--greyish-teal);
 }
 
+.AddressBookEntry {
+  display: flex;
+  justify-content: space-around;
+  padding: 0.75em;
+}
+
 @media all and (max-width: 768px) {
   .postcardImageContainer {
     display: none;
