--- a/client/src/address/address.css
+++ b/client/src/address/address.css
@@ -80,10 +80,35 @@ select {
   border: 3px solid var(--greyish-teal);
 }
 
+.AddressBook {
+  display: flex;
+  flex-direction: column;
+}
+
+.AddressBook-Header {
+  width: 50%;
+  margin: auto;
+  margin-bottom: 1rem;
+}
+
+.AddressBook-list {
+  flex: 1;
+  max-height: 65vh;
+  overflow: auto;
+}
+
 .AddressBookEntry {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   padding: 0.75em;
+  width: 50%;
+  margin: auto;
+}
+
+.AddressBookEntry-icon--selected {
+  width: 30px;
+  height: 30px;
 }
 
 @media all and (max-width: 768px) {
@@ -94,5 +119,25 @@ select {
   .Address {
     width: 100%;
     margin-left: 0; /* not centered for some reason */
+  }
+
+  .AddressBook-Header {
+    width: 100%;
+  }
+
+  .AddressBookEntry {
+    width: 100%;
+  }
+
+  .AddressBookEntry-icon--selected {
+    width: 8vw;
+    height: 8vw;
+  }
+}
+
+@media all and (max-width: 414px) {
+  .AddressBookEntry-icon--selected {
+    width: 10vw;
+    height: 10vw;
   }
 }
