update review css

--- a/client/src/approval/approval.css
+++ b/client/src/approval/approval.css
@@ -18,10 +18,10 @@
 .address-reviews {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 }
 
 .AddressReview {
-  width: 40%;
   margin: 1em;
 }
 
